--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-<title>Kelvin & Bride Wedding Invitation</title>
+<title>Bryan & Brenda Wedding Invitation</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Cinzel:wght@600&display=swap" rel="stylesheet">
 
@@ -29,26 +29,6 @@ background:white;
 color:#C6A75E;
 }
 
-/* ================= LOADER ================= */
-
-.loader{
-position:fixed;
-width:100%;
-height:100vh;
-background:black;
-display:flex;
-align-items:center;
-justify-content:center;
-color:var(--glod);
-font-size:46px;
-z-index:9999;
-animation:fadeOut 1s forwards 1.5s;
-}
-
-@keyframes fadeOut{
-to{opacity:0;visibility:hidden;}
-}
-
 /* ================= INTRO ================= */
 
 .intro{
@@ -61,7 +41,7 @@ flex-direction:column;
 }
 
 .envelope{
-width:360px;
+width:300px;
 cursor:pointer;
 transition:1s ease;
 }
@@ -393,4 +373,5 @@ days+"d "+hours+"h "+minutes+"m "+seconds+"s";
 </script>
 
 </body>
+
 </html>
