--- a/index.html
+++ b/index.html
@@ -29,6 +29,26 @@ background:white;
 color:#C6A75E;
 }
 
+  /* ================= LOADER ================= */
+
+.loader{
+position:fixed;
+width:100%;
+height:100vh;
+background:black;
+display:flex;
+align-items:center;
+justify-content:center;
+color:var(--glod);
+font-size:46px;
+z-index:9999;
+animation:fadeOut 1s forwards 1.5s;
+}
+
+@keyframes fadeOut{
+to{opacity:0;visibility:hidden;}
+}
+  
   /* ================= INTRO ================= */
 
 .intro{
@@ -241,12 +261,14 @@ animation:shimmer 4s infinite;
 .address h1{font-size:45px;}
 
 }
-
+  
 </style>
 </head>
 
 <body>
-  
+
+<div class="loader">Bryan & Brenda 💍</div>
+
 <!-- MUSIC (Add your legally owned MP3 file in same folder) -->
 <audio id="bgMusic" loop>
 <source src="wedding-music.mp3" type="audio/mpeg">
@@ -373,6 +395,7 @@ days+"d "+hours+"h "+minutes+"m "+seconds+"s";
 </body>
 
 </html>
+
 
 
 
