--- a/index.html
+++ b/index.html
@@ -358,7 +358,8 @@ Colossians 3:14 <br>
 <section class="footer">
 <img src="ring.png" class="ring">
 <h1>
-Thank You For Being Part <br>
+Thank You For <br> 
+Being Part <br>
 Of Our Journey
 </h1>
 </section>
@@ -395,6 +396,7 @@ days+"d "+hours+"h "+minutes+"m "+seconds+"s";
 </body>
 
 </html>
+
 
 
 
