--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ width:100%;
 height:100vh;
 
 /* ADD YOUR LOADER BACKGROUND IMAGE HERE */
-background:url('loader-bg.jpg') center/cover no-repeat;
+background:url('load-bg.png') center/cover no-repeat;
 
 display:flex;
 align-items:center;
@@ -199,29 +199,27 @@ color:var(--sage);
 
 /* ================= FOOTER ================= */
 
+/* ================= FOOTER ================= */
+
 .footer{
-min-height:100vh;
-background:var(--wine);
+height:100vh;
+background:url('foot-bg.png') center/cover no-repeat;
 position:relative;
 display:flex;
 align-items:center;
 justify-content:center;
 flex-direction:column;
 color:white;
-overflow:hidden;
 }
 
-/* Line Art Doodle Overlay */
-.footer::before{
-content:"";
+.footer::after{
+content:'';
 position:absolute;
+bottom:0;
 width:100%;
 height:100%;
-background:url('doodle-line-art.png') center/contain no-repeat;
-opacity:0.08;
-pointer-events:none;
+background:radial-gradient(circle at bottom, rgba(198,167,94,0.6), transparent);
 }
-
 .footer h1{
 font-family:'Great Vibes';
 font-size:65px;
@@ -249,7 +247,7 @@ animation:shimmer 4s infinite;
 
 <body>
 
-<div class="loader">Bryan & Brenda</div>
+<div class="loader"></div>
 
 <!-- MUSIC -->
 <audio id="bgMusic" loop>
@@ -276,9 +274,10 @@ animation:shimmer 4s infinite;
 <h2>As We Fulfill God's Ordained Purpose on Earth</h2>
 
 <div class="details">
-Saturday, 10th October 2026 <br>
+10 | 10 | 2026 <br>
 2:00 PM <br>
-Abuja, Nigeria
+Myra Event Center,
+Guzape -Abuja
 </div>
 
 <div class="countdown" id="countdown"></div>
@@ -288,7 +287,41 @@ Abuja, Nigeria
 <section class="story">
 <h1>Our Story</h1>
 <p>
-(Your story remains here unchanged)
+We don’t know exactly where this road is taking us…
+but we know we are grateful to be walking it together.
+
+Every day feels like a new chapter—
+sometimes calm, sometimes unpredictable,
+sometimes full of laughter, sometimes quiet and soft—
+yet every moment somehow becomes beautiful
+because we are in it together. We didn’t just enter each other’s lives;
+we gently changed them. We’ve made ordinary days feel
+special and simple conversations feel like
+memories we never want to forget.
+
+This journey we are on isn’t perfect, but it’s real.
+We are learning each other’s fears, strengths,
+moods, and dreams… and it’s incredible how we are growing,
+not apart, but together. We love how we understand
+each other even when not much is said, how our presence
+alone gives us peace, and how our hearts feel safe with one another.
+
+No matter how long the road becomes, we don’t want to rush it.
+We want to experience every step—the late-night talks, the teasing,
+the disagreements we fix, the laughter that hurts our
+stomachs, and the quiet moments where words are not needed.
+
+We aren't just here for the happy days. We are here for the confusing days,
+the stressful days, the tired days… we are here for each other.
+Because loving one another is not just a feeling to us;
+it has become a decision we make every single day.
+
+So wherever this journey leads, just know one thing:
+We aren’t just holding hands for a moment,
+we’re holding them for the story we are writing together.
+
+And honestly…
+We wouldn’t want to travel this life with anyone else.
 </p>
 
 <div class="verse">
