--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ transform:translateX(-50%) translateY(-20px);}
 @media(max-width:768px){
 
 .loader{
-background-size:100% auto;  /* shows full image */
+background-size:contain;  /* shows full image */
 background-position:center top;
 background-color:#000;     /* fills empty space */
 }
@@ -433,3 +433,4 @@ days+"d "+hours+"h "+minutes+"m "+seconds+"s";
 
 </body>
 </html>
+
