--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ width:100%;
 height:100vh;
 
 /* Desktop */
-background:url('load-bg.png') center center no-repeat;
+background:url('load-bg.jpg') center center no-repeat;
 background-size:cover;
 
 display:flex;
@@ -433,6 +433,7 @@ days+"d "+hours+"h "+minutes+"m "+seconds+"s";
 
 </body>
 </html>
+
 
 
 
