--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
 <title>Bryan & Brenda Wedding Invitation</title>
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
 <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Cinzel:wght@600&display=swap" rel="stylesheet">
 
 <style>
@@ -92,9 +95,9 @@ border-radius:5px;
 /* ================= HERO ================= */
 
 .hero{
-min-height:100vh;
-background:url('hero-bg.png') center/contain no-repeat;
-background-color:white;
+height:100vh; /* Full screen height */
+background:url('hero-bg.png') no-repeat center center;
+background-size:cover; /* Makes image fill entire section */
 display:flex;
 align-items:flex-end;
 justify-content:center;
@@ -175,7 +178,7 @@ background:url('text-bg.jpg') center/cover no-repeat;
 }
 
 .story h1{
-font-family:'Great Vibes';
+font-family: 'Great Vibes', cursive;
 font-size:100px;
 color:var(--gold);
 margin-bottom:50px;
@@ -433,6 +436,7 @@ days+"d "+hours+"h "+minutes+"m "+seconds+"s";
 
 </body>
 </html>
+
 
 
 
