--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ background-color:#000;     /* fills empty space */
 <div class="details">
 10 | 10 | 2026 <br>
 2:00 PM <br>
-Myra Event Center,
+Myra Event Center,<br>
 Guzape -Abuja
 </div>
 
@@ -436,6 +436,7 @@ days+"d "+hours+"h "+minutes+"m "+seconds+"s";
 
 </body>
 </html>
+
 
 
 
