--- a/index.html
+++ b/index.html
@@ -7,272 +7,255 @@
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
 <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Cinzel:wght@600&display=swap" rel="stylesheet">
 
 <style>
-
 :root{
---gold:#C6A75E;
---sage:#9CAF88;
---pink:#E8B7C7;
---wine:#722F37;
+    --gold:#C6A75E;
+    --sage:#9CAF88;
+    --pink:#E8B7C7;
+    --wine:#722F37;
 }
 
 *{
-margin:0;
-padding:0;
-box-sizing:border-box;
-scroll-behavior:smooth;
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+    scroll-behavior:smooth;
 }
 
 body{
-font-family:'Century Gothic', sans-serif;
-overflow-x:hidden;
-background:white;
-color:var(--gold);
+    font-family:'Century Gothic', sans-serif;
+    overflow-x:hidden;
+    background:white;
+    color:var(--gold);
+}
+
+/* ================= SCROLL ANIMATION CLASS ================= */
+.reveal {
+    opacity: 0;
+    transform: translateY(50px);
+    transition: all 1.2s ease-out;
+}
+
+.reveal.active {
+    opacity: 1;
+    transform: translateY(0);
 }
 
 /* ================= LOADER ================= */
-
 .loader{
-position:fixed;
-width:100%;
-height:100vh;
-
-/* Desktop */
-background:url('load-b.jpeg') center center no-repeat;
-background-size:cover;
-
-display:flex;
-align-items:center;
-justify-content:center;
-color:white;
-font-size:50px;
-font-family:'Great Vibes', cursive;
-letter-spacing:3px;
-z-index:9999;
-animation:fadeOut 2s forwards 2s;
+    position:fixed;
+    width:100%;
+    height:100vh;
+    background:url('load-b.jpeg') center center no-repeat;
+    background-size:cover;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    color:white;
+    font-size:50px;
+    font-family:'Great Vibes', cursive;
+    letter-spacing:3px;
+    z-index:9999;
+    animation:fadeOut 2s forwards 2s;
 }
 
-@keyframes fadeOut{
-to{opacity:0;visibility:hidden;}
-}
+@keyframes fadeOut{ to{opacity:0;visibility:hidden;} }
 
 /* ================= INTRO ================= */
-
 .intro{
-height:100vh;
-background:url('intro-bg.jpg') center/cover no-repeat;
-display:flex;
-align-items:center;
-justify-content:center;
-flex-direction:column;
+    height:100vh;
+    background:url('intro-bg.jpg') center/cover no-repeat;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    flex-direction:column;
 }
 
 .envelope{
-width:300px;
-cursor:pointer;
-transition:1s ease;
+    width:300px;
+    cursor:pointer;
+    transition:1s ease;
 }
 
 .envelope.open{
-transform:rotateY(180deg);
-opacity:0;
+    transform:rotateY(180deg);
+    opacity:0;
 }
 
 .open-btn{
-margin-top:30px;
-padding:22px 40px;
-border:none;
-background:var(--gold);
-color:white;
-font-weight:bold;
-cursor:pointer;
-border-radius:5px;
+    margin-top:30px;
+    padding:22px 40px;
+    border:none;
+    background:var(--gold);
+    color:white;
+    font-weight:bold;
+    cursor:pointer;
+    border-radius:5px;
 }
 
 /* ================= HERO ================= */
-
 .hero{
-height:100vh; /* Full screen height */
-background:url('hero-bg.png') no-repeat center center;
-background-size:cover; /* Makes image fill entire section */
-display:flex;
-align-items:flex-end;
-justify-content:center;
-padding-bottom:150px;
+    height:100vh;
+    background:url('hero-bg.png') no-repeat center center;
+    background-size:cover;
+    display:flex;
+    align-items:flex-end;
+    justify-content:center;
+    padding-bottom:150px;
 }
 
 .hero-text{
-background:rgba(114, 47, 55, 0.5);
-padding:10px 30px;
-border-radius:15px;
-border:2px solid var(--sage);
-text-align:center;
+    background:rgba(114, 47, 55, 0.5);
+    padding:10px 30px;
+    border-radius:15px;
+    border:2px solid var(--sage);
+    text-align:center;
 }
 
 .hero h1{
-font-family:'Great Vibes', cursive;
-font-size:70px;
-background:linear-gradient(90deg,var(--gold),#fff,var(--gold));
-background-size:768%;
--webkit-background-clip:text;
--webkit-text-fill-color:transparent;
-animation:shimmer 4s infinite;
+    font-family:'Great Vibes', cursive;
+    font-size:70px;
+    background:linear-gradient(90deg,var(--gold),#fff,var(--gold));
+    background-size:768%;
+    -webkit-background-clip:text;
+    -webkit-text-fill-color:transparent;
+    animation:shimmer 4s infinite;
 }
 
 @keyframes shimmer{
-0%{background-position:-200%;}
-100%{background-position:200%;}
+    0%{background-position:-200%;}
+    100%{background-position:200%;}
 }
 
 .save-date{
-margin-top:15px;
-font-size:28px;
-color:var(--sage);
+    margin-top:15px;
+    font-size:28px;
+    color:var(--sage);
 }
 
 /* ================= ADDRESS ================= */
-
 .address{
-min-height:100vh;
-text-align:center;
-padding:120px 20px;
-background:url('bg-venue.png') center/cover no-repeat;
+    min-height:100vh;
+    text-align:center;
+    padding:120px 20px;
+    background:url('bg-venue.png') center/cover no-repeat;
 }
 
 .address h1{
-font-family:'Great Vibes';
-font-size:70px;
-color:var(--gold);
+    font-family:'Great Vibes';
+    font-size:70px;
+    color:var(--gold);
 }
 
 .address h2{
-font-size:28px;
-margin-top:15px;
-color:var(--sage);
+    font-size:28px;
+    margin-top:15px;
+    color:var(--sage);
 }
 
 .details{
-margin-top:50px;
-font-weight:bold;
-font-size:28px;
-color:#222;
+    margin-top:50px;
+    font-weight:bold;
+    font-size:28px;
+    color:#222;
 }
 
 .countdown{
-margin-top:40px;
-font-size:32px;
-font-weight:bold;
-color:var(--gold);
+    margin-top:40px;
+    font-size:32px;
+    font-weight:bold;
+    color:var(--gold);
 }
 
 /* ================= STORY ================= */
-
 .story{
-min-height:100vh;
-padding:130px 20px;
-text-align:center;
-background:url('text-bg.jpg') center/cover no-repeat;
+    min-height:100vh;
+    padding:130px 20px;
+    text-align:center;
+    background:url('text-bg.jpg') center/cover no-repeat;
 }
 
 .story h1{
-font-family: 'Great Vibes', cursive;
-font-size:100px;
-color:var(--gold);
-margin-bottom:50px;
+    font-family: 'Great Vibes', cursive;
+    font-size:100px;
+    color:var(--gold);
+    margin-bottom:50px;
 }
 
 .story p{
-font-size:20px;
-font-weight:bold;
-line-height:1.6;
-color:#444;
-max-width:900px;
-margin:auto;
+    font-size:20px;
+    font-weight:bold;
+    line-height:1.6;
+    color:#444;
+    max-width:900px;
+    margin:auto;
 }
 
 .verse{
-margin-top:50px;
-font-style:italic;
-font-weight:bold;
-font-size:22px;
-color:var(--sage);
+    margin-top:50px;
+    font-style:italic;
+    font-weight:bold;
+    font-size:22px;
+    color:var(--sage);
 }
 
 /* ================= FOOTER ================= */
-
 .footer{
-height:100vh;
-background:url('foot-bg.png') center/cover no-repeat;
-position:relative;
-display:flex;
-align-items:center;
-justify-content:center;
-flex-direction:column;
-color:white;
+    height:100vh;
+    background:url('foot-bg.png') center/cover no-repeat;
+    position:relative;
+    display:flex;
+    align-items:center;
+    justify-content:flex-end; /* This pushes content to bottom */
+    flex-direction:column;
+    color:white;
+    padding-bottom: 250px; /* Space from the bottom edge */
 }
 
-.footer::after{
-content:'';
-position:absolute;
-bottom:0;
-width:100%;
-height:100%;
-background:radial-gradient(circle at bottom, rgba(198,167,94,0.6), transparent);
-}
 .footer h1{
-font-family:'Great Vibes';
-font-size:65px;
-text-align:center;
-z-index:2;
-background:linear-gradient(90deg,var(--gold),#fff,var(--gold));
-background-size:200%;
--webkit-background-clip:text;
--webkit-text-fill-color:transparent;
-animation:shimmer 4s infinite;
+    font-family:'Great Vibes';
+    font-size:60px;
+    text-align:center;
+    z-index:2;
+    background:linear-gradient(90deg,var(--gold),#fff,var(--gold));
+    background-size:200%;
+    -webkit-background-clip:text;
+    -webkit-text-fill-color:transparent;
+    animation:shimmer 4s infinite;
+    line-height: 1.2;
 }
-
-/* ===== BOUNCING DOODLE ===== */
 
 .footer-doodle{
-position:absolute;
-bottom:0;
-left:50%;
-transform:translateX(-50%);
-width:280px; /* adjust size if needed */
-z-index:1;
-animation:bounce 3s infinite ease-in-out;
+    position:absolute;
+    bottom:0;
+    left:50%;
+    transform:translateX(-50%);
+    width:280px; 
+    z-index:1;
+    animation:bounce 3s infinite ease-in-out;
 }
 
-/* Bounce Animation */
 @keyframes bounce{
-0%,100%{
-transform:translateX(-50%) translateY(0);
-}
-50%{
-transform:translateX(-50%) translateY(-20px);}
-
+    0%,100%{ transform:translateX(-50%) translateY(0); }
+    50%{ transform:translateX(-50%) translateY(-20px);}
 }
 
 /* ================= MOBILE ================= */
-
 @media(max-width:768px){
-
-.loader{
-background-size:contain;  /* shows full image */
-background-position:center top;
-background-color:#000;     /* fills empty space */
+    .loader{
+        background-size:contain;
+        background-position:center top;
+        background-color:#000;
+    }
+    .hero h1{font-size:45px;}
+    .story h1{font-size:55px;}
+    .footer h1{font-size:38px;}
+    .footer { padding-bottom: 180px; } /* Closer to bottom on mobile */
+    .details{font-size:22px;}
+    .address h1{font-size:45px;}
 }
-
-.hero h1{font-size:45px;}
-.story h1{font-size:55px;}
-.footer h1{font-size:38px;}
-.details{font-size:22px;}
-.address h1{font-size:45px;}
-}
-
 </style>
 </head>
 
@@ -280,168 +263,89 @@ background-color:#000;     /* fills empty space */
 
 <div class="loader"></div>
 
-<!-- MUSIC -->
 <audio id="bgMusic" loop>
 <source src="wedding-music.mp3" type="audio/mpeg">
 </audio>
 
-<!-- INTRO -->
 <section class="intro" id="intro">
 <img src="envelope.png" class="envelope" id="envelope">
 <button class="open-btn" onclick="openInvite()">Open Invitation</button>
 </section>
 
-<!-- HERO -->
-<section class="hero">
+<section class="hero reveal">
 <div class="hero-text">
 <h1>Bryan & Brenda</h1>
 <div class="save-date">Save The Date</div>
 </div>
 </section>
 
-<!-- ADDRESS -->
-<section class="address">
+<section class="address reveal">
 <h1>Come Join Us Celebrate</h1>
 <h2>As We Fulfill God's Ordained Purpose on Earth</h2>
-
-<div class="details">
-10 | 10 | 2026 <br>
-2:00 PM <br>
-Myra Event Center,<br>
-Guzape -Abuja
-</div>
-
+<div class="details">10 | 10 | 2026 <br> 2:00 PM <br> Myra Event Center,<br> Guzape -Abuja</div>
 <div class="countdown" id="countdown"></div>
 </section>
 
-<!-- STORY -->
-<section class="story">
+<section class="story reveal">
 <h1>Our Story</h1>
 <p>
-We don’t know exactly where this road is taking us…
-but we know we are grateful to be walking it together.
-
-Every day feels like a new chapter—
-sometimes calm, sometimes unpredictable,
-sometimes full of laughter, sometimes quiet and soft—
-yet every moment somehow becomes beautiful
-because we are in it together. We didn’t just enter each other’s lives;
-we gently changed them. We’ve made ordinary days feel
-special and simple conversations feel like
-memories we never want to forget.
-
-This journey we are on isn’t perfect, but it’s real.
-We are learning each other’s fears, strengths,
-moods, and dreams… and it’s incredible how we are growing,
-not apart, but together. We love how we understand
-each other even when not much is said, how our presence
-alone gives us peace, and how our hearts feel safe with one another.
-
-No matter how long the road becomes, we don’t want to rush it.
-We want to experience every step—the late-night talks, the teasing,
-the disagreements we fix, the laughter that hurts our
-stomachs, and the quiet moments where words are not needed.
-
-We aren't just here for the happy days. We are here for the confusing days,
-the stressful days, the tired days… we are here for each other.
-Because loving one another is not just a feeling to us;
-it has become a decision we make every single day.
-
-So wherever this journey leads, just know one thing:
-We aren’t just holding hands for a moment,
-we’re holding them for the story we are writing together.
-
-And honestly…
-We wouldn’t want to travel this life with anyone else.
+We don’t know exactly where this road is taking us… but we know we are grateful to be walking it together.
+Every day feels like a new chapter— sometimes calm, sometimes unpredictable...
 </p>
-
-<div class="verse">
-Colossians 3:14 <br>
-“And over all these virtues put on love, which binds them all together in perfect unity.”
-</div>
+<div class="verse">Colossians 3:14 <br> “And over all these virtues put on love, which binds them all together in perfect unity.”</div>
 </section>
 
-<!-- FOOTER -->
 <section class="footer">
-<h1>
-Thank You For <br> 
+<h1 class="reveal">
+Thank You For <br>  
 Being Part <br>
 Of Our Journey
 </h1>
-
 <img src="footer-doodle.png" class="footer-doodle" alt="footer doodle">
-
 </section>
 
 <script>
+// SCROLL REVEAL LOGIC
+const observerOptions = { threshold: 0.1 };
+const observer = new IntersectionObserver((entries) => {
+    entries.forEach(entry => {
+        if (entry.isIntersecting) {
+            entry.target.classList.add('active');
+        }
+    });
+}, observerOptions);
 
-/* ===== ALWAYS SCROLL TO TOP ON REFRESH ===== */
+document.querySelectorAll('.reveal').forEach(el => observer.observe(el));
 
-// Disable browser scroll restoration
-if ('scrollRestoration' in history) {
-history.scrollRestoration = 'manual';
-}
-
-// Force scroll to top on load
-window.onload = function() {
-window.scrollTo(0, 0);
-};
+// DISABLE SCROLL RESTORATION
+if ('scrollRestoration' in history) { history.scrollRestoration = 'manual'; }
+window.onload = function() { window.scrollTo(0, 0); };
 
 function openInvite(){
-
-// Scroll to top when invitation opens
-window.scrollTo({ top: 0, behavior: "smooth" });
-
-document.getElementById("envelope").classList.add("open");
-
-var music = document.getElementById("bgMusic");
-
-// Force volume to 40% BEFORE play
-music.volume = 0.4;
-music.currentTime = 0;
-
-// Play safely (for browser restrictions)
-var playPromise = music.play();
-
-if (playPromise !== undefined) {
-playPromise.then(_ => {
-// playing
-}).catch(error => {
-console.log("Autoplay blocked:", error);
-});
+    window.scrollTo({ top: 0, behavior: "smooth" });
+    document.getElementById("envelope").classList.add("open");
+    var music = document.getElementById("bgMusic");
+    music.volume = 0.4;
+    music.currentTime = 0;
+    var playPromise = music.play();
+    if (playPromise !== undefined) {
+        playPromise.then(_ => {}).catch(error => { console.log("Autoplay blocked:", error); });
+    }
+    setTimeout(()=>{ document.getElementById("intro").style.display="none"; }, 1000);
 }
 
-setTimeout(()=>{
-document.getElementById("intro").style.display="none";
-},1000);
-}
-/* COUNTDOWN */
+// COUNTDOWN
 var weddingDate = new Date("Oct 10, 2026 14:00:00").getTime();
-
 setInterval(function(){
-var now = new Date().getTime();
-var distance = weddingDate - now;
-
-var days = Math.floor(distance/(1000*60*60*24));
-var hours = Math.floor((distance%(1000*60*60*24))/(1000*60*60));
-var minutes = Math.floor((distance%(1000*60*60))/(1000*60));
-var seconds = Math.floor((distance%(1000*60))/1000);
-
-document.getElementById("countdown").innerHTML =
-days+"d "+hours+"h "+minutes+"m "+seconds+"s";
-
+    var now = new Date().getTime();
+    var distance = weddingDate - now;
+    var days = Math.floor(distance/(1000*60*60*24));
+    var hours = Math.floor((distance%(1000*60*60*24))/(1000*60*60));
+    var minutes = Math.floor((distance%(1000*60*60))/(1000*60));
+    var seconds = Math.floor((distance%(1000*60))/1000);
+    document.getElementById("countdown").innerHTML = days+"d "+hours+"h "+minutes+"m "+seconds+"s";
 },1000);
-
 </script>
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
