--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@ body{
     position:relative;
     display:flex;
     align-items:center;
-    justify-content:flex-end; /* This pushes content to bottom */
+     /* This pushes content to bottom */
     flex-direction:column;
     color:white;
-    padding-bottom: 250px; /* Space from the bottom edge */
+    padding-bottom: 300px; /* Space from the bottom edge */
 }
 
 .footer h1{
@@ -224,7 +224,7 @@ body{
     -webkit-background-clip:text;
     -webkit-text-fill-color:transparent;
     animation:shimmer 4s infinite;
-    line-height: 1.2;
+    line-height: 1.5;
 }
 
 .footer-doodle {
@@ -348,4 +348,5 @@ setInterval(function(){
 
 </body>
 </html>
+
 
