--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ body{
      /* This pushes content to bottom */
     flex-direction:column;
     color:white;
-    padding-bottom: 300px; /* Space from the bottom edge */
+    padding-bottom: 190px; /* Space from the bottom edge */
 }
 
 .footer h1{
@@ -230,6 +230,7 @@ body{
 .footer-doodle {
     display: block;
     margin: 2cm auto 0; /* 2cm gap under the text, centered horizontally */
+    justify-content: center;
     width: 280px; 
     z-index: 1;
     opacity: 0.6; /* 60% Opacity */
@@ -348,5 +349,6 @@ setInterval(function(){
 
 </body>
 </html>
+
 
 
