--- a/index.html
+++ b/index.html
@@ -202,45 +202,44 @@ body{
 }
 
 /* ================= FOOTER ================= */
-.footer{
-    height:100vh;
-    background:url('foot-bg.png') center/cover no-repeat;
-    position:relative;
-    display:flex;
-    align-items:center;
-     /* This pushes content to bottom */
-    flex-direction:column;
-    color:white;
-    padding-bottom: 190px; /* Space from the bottom edge */
+.footer {
+    height: 100vh;
+    background: url('foot-bg.png') center/cover no-repeat;
+    display: flex;
+    align-items: center;      /* Centers horizontally */
+    justify-content: center;   /* Centers vertically */
+    flex-direction: column;
+    color: white;
+    padding-top: 100px;        /* Pushes the whole group slightly down from center */
 }
 
-.footer h1{
-    font-family:'Great Vibes';
-    font-size:60px;
-    text-align:center;
-    z-index:2;
-    background:linear-gradient(90deg,var(--gold),#fff,var(--gold));
-    background-size:200%;
-    -webkit-background-clip:text;
-    -webkit-text-fill-color:transparent;
-    animation:shimmer 4s infinite;
-    line-height: 1.5;
+.footer h1 {
+    font-family: 'Great Vibes';
+    font-size: 60px;
+    text-align: center;
+    z-index: 2;
+    background: linear-gradient(90deg, var(--gold), #fff, var(--gold));
+    background-size: 200%;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: shimmer 4s infinite;
+    line-height: 1.2;
 }
 
 .footer-doodle {
     display: block;
-    margin: 2cm auto 0; /* 2cm gap under the text, centered horizontally */
-    justify-content: center;
+    margin-top: 2cm;           /* Exactly 2cm under the text */
     width: 280px; 
     z-index: 1;
-    opacity: 0.6; /* 60% Opacity */
+    opacity: 0.6;              /* 60% Opacity */
     animation: bounce 3s infinite ease-in-out;
 }
 
-@keyframes bounce{
-    0%,100%{ transform:translateX(-50%) translateY(0); }
-    50%{ transform:translateX(-50%) translateY(-20px);}
+@keyframes bounce {
+    0%, 100% { transform: translateY(0); }
+    50% { transform: translateY(-20px); }
 }
+
 
 /* ================= MOBILE ================= */
 @media(max-width:768px){
@@ -349,6 +348,7 @@ setInterval(function(){
 
 </body>
 </html>
+
 
 
 
