--- a/index.html
+++ b/index.html
@@ -288,8 +288,14 @@ body{
 <section class="story reveal">
 <h1>Our Story</h1>
 <p>
-We don’t know exactly where this road is taking us… but we know we are grateful to be walking it together.
-Every day feels like a new chapter— sometimes calm, sometimes unpredictable...
+We don’t know exactly where this road is taking us… but we are grateful to be walking it together.
+Every day feels like a new chapter—sometimes calm, sometimes unpredictable, full of laughter, or quiet and soft—yet every moment becomes beautiful because we are in it together. We didn't just enter each other's lives; we gently changed them. We’ve made ordinary days feel special and simple conversations feel like memories we never want to forget.
+This journey we are on isn’t perfect, but it’s real. We are learning each other’s fears, strengths, moods, and dreams… and it's incredible how we are growing, not apart, but together. We love how we understand each other even when not much is said, how our presence gives us peace, and how our hearts feel safe with one another.
+No matter how long the road becomes, we don’t want to rush it. We want to experience every step—the late-night talks, the teasing, the disagreements we fix, the laughter that hurts our stomachs, and the quiet moments where words are not needed.
+We aren’t just here for the happy days. We are here for the confusing days, the stressful days, the tired days… we are here for each other. Because loving one another is not just a feeling; it has become a decision we make every single day.
+So wherever this journey leads, just know one thing—we aren’t just holding hands for a moment; we are holding them for the story we are writing together.
+And honestly… we wouldn’t want to travel this life with anyone else but each other.
+
 </p>
 <div class="verse">Colossians 3:14 <br> “And over all these virtues put on love, which binds them all together in perfect unity.”</div>
 </section>
@@ -348,6 +354,7 @@ setInterval(function(){
 
 </body>
 </html>
+
 
 
 
