--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ body{
     font-family:'Great Vibes', cursive;
     letter-spacing:3px;
     z-index:9999;
-    animation:fadeOut 1s forwards 1s;
+    animation:fadeOut 1.3s forwards 1.3s;
 }
 
 @keyframes fadeOut{ to{opacity:0;visibility:hidden;} }
@@ -228,10 +228,10 @@ body{
 
 .footer-doodle {
     display: block;
-    margin-top: 1.2cm;           /* Exactly 2cm under the text */
+    margin-top: 1.4cm;           /* Exactly 2cm under the text */
     width: 280px; 
     z-index: 1;
-    opacity: 0.2;              /* 60% Opacity */
+    opacity: 0.4;              /* 60% Opacity */
     animation: bounce 3s infinite ease-in-out;
 }
 
@@ -281,7 +281,9 @@ body{
 <section class="address reveal">
 <h1>Come Join Us Celebrate</h1>
 <h2>As We Fulfill God's Ordained Purpose on Earth</h2>
-<div class="details">10 | 10 | 2026 <br> 2:00 PM <br> Myra Event Center,<br> Guzape -Abuja</div>
+<div class="details">10 | 10 | 2026 <br> 2:00 PM <br> 
+    <br>
+    Myra Event Center,<br> Guzape -Abuja</div>
 <div class="countdown" id="countdown"></div>
 </section>
 
@@ -356,6 +358,7 @@ setInterval(function(){
 
 </body>
 </html>
+
 
 
 
