--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ body{
 /* ================= HERO ================= */
 .hero{
     height:100vh;
-    background:url('hero-bg.png') no-repeat center center;
+    background:url('hero-b.jpeg') no-repeat center center;
     background-size:cover;
     display:flex;
     align-items:flex-end;
@@ -204,7 +204,7 @@ body{
 /* ================= FOOTER ================= */
 .footer {
     height: 100vh;
-    background: url('foot-bg.png') center/cover no-repeat;
+    background: url('foot-b.jpeg') center/cover no-repeat;
     display: flex;
     align-items: center;      /* Centers horizontally */
     justify-content: center;   /* Centers vertically */
@@ -358,6 +358,7 @@ setInterval(function(){
 
 </body>
 </html>
+
 
 
 
